--- a/index.html
+++ b/index.html
@@ -5,29 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div class="container">
+    <div class="header">
+      <img src="images/logo.svg" alt="">
+    </div>
+        <img src="images/illustration-mockups.svg" alt="">
 
-  Build The Community Your Fans Will Love
+        <h2>Build The Community Your Fans Will Love</h2>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
 
-  Register
+        <button>Register</button>
 
-  <footer>
+      <div class="icons">
+        <img src="images/facebook.svg" alt="">
+        <img src="images/twitter.svg" alt="">
+        <img src="images/instagram.svg" alt="">
+      </div>
+    </div>
+    </div>
+  </div>
+ 
+
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p> -->
   </footer>
 </body>
 </html>
