--- a/index.html
+++ b/index.html
@@ -5,39 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <script src="https://kit.fontawesome.com/9fb41a1a6b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
 <body>
-  <div class="container">
+<div class="container">
+  <div class="wrapper">
     <div class="header">
       <img src="images/logo.svg" alt="">
     </div>
-        <img src="images/illustration-mockups.svg" alt="">
-
-        <h2>Build The Community Your Fans Will Love</h2>
-
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
-
-        <button>Register</button>
-
-      <div class="icons">
-        <img src="images/facebook.svg" alt="">
-        <img src="images/twitter.svg" alt="">
-        <img src="images/instagram.svg" alt="">
-      </div>
-    </div>
-    </div>
+      <div class="main">
+        <div class="main-img">
+          <img src="images/illustration-mockups.svg" alt="">
+        </div>
+        <div class="textbox-content">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
+          <a href="#">Register</a> 
+        </div> 
+      </div>        
+        <div class="icons">
+            <a href="#"> 
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#"> 
+              <i <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#"> 
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+        </div>
   </div>
- 
-
-  <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p> -->
-  </footer>
+</div>
 </body>
 </html>
