--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       </div>        
         <div class="icons">
             <a href="#"> 
-              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-facebook-f" aria-label="Facebook page"></i>
             </a>
             <a href="#"> 
-              <i <i class="fa-brands fa-twitter"></i>
+              <i <i class="fa-brands fa-twitter" aria-label="Twitter page"></i>
             </a>
             <a href="#"> 
-              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-instagram" aria-label="Instagram page"></i>
             </a>
         </div>
   </div>
