--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 <body>
 <div class="container">
   <div class="wrapper">
-    <div class="header">
-      <img src="images/logo.svg" alt="">
-    </div>
+    <header>
+        <div class="header">
+          <img src="images/logo.svg" alt="">
+        </div>
+    </header>
+
+    <main>    
       <div class="main">
         <div class="main-img">
           <img src="images/illustration-mockups.svg" alt="">
@@ -25,20 +29,25 @@
           <h1>Build The Community Your Fans Will Love</h1>
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
           <a href="#">Register</a> 
-        </div> 
-      </div>        
-        <div class="icons">
-            <a href="#"> 
-              <i class="fa-brands fa-facebook-f" aria-label="Facebook page"></i>
-            </a>
-            <a href="#"> 
-              <i <i class="fa-brands fa-twitter" aria-label="Twitter page"></i>
-            </a>
-            <a href="#"> 
-              <i class="fa-brands fa-instagram" aria-label="Instagram page"></i>
-            </a>
         </div>
+      </div>  
+    </main>
+     
+    <footer>
+      <div class="icons">
+        <a href="#"> 
+          <i class="fa-brands fa-facebook-f" aria-label="Facebook page"></i>
+        </a>
+        <a href="#"> 
+          <i <i class="fa-brands fa-twitter" aria-label="Twitter page"></i>
+        </a>
+        <a href="#"> 
+          <i class="fa-brands fa-instagram" aria-label="Instagram page"></i>
+        </a>
+      </div>
+    </footer>  
   </div>
 </div>
+
 </body>
 </html>
