--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <footer>
       <div class="icons">
         <a href="#"> 
-          <i class="fa-brands fa-facebook-f" aria-label="Facebook page"></i>
+          <i class="fa-brands fa-facebook-f"></i>
         </a>
         <a href="#"> 
-          <i <i class="fa-brands fa-twitter" aria-label="Twitter page"></i>
+          <i <i class="fa-brands fa-twitter"></i>
         </a>
         <a href="#"> 
-          <i class="fa-brands fa-instagram" aria-label="Instagram page"></i>
+          <i class="fa-brands fa-instagram"></i>
         </a>
       </div>
     </footer>  
