--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     </main>
      
     <footer>
-      <div class="icons">
-        <a href="#"> 
+      <div class="icons" >
+        <a href="#" aria-label="social media sites"> 
           <i class="fa-brands fa-facebook-f"></i>
         </a>
-        <a href="#"> 
+        <a href="#" aria-label="social media sites"> 
           <i <i class="fa-brands fa-twitter"></i>
         </a>
-        <a href="#"> 
+        <a href="#" aria-label="social media sites"> 
           <i class="fa-brands fa-instagram"></i>
         </a>
       </div>
